--- a/roles/nginx-tls-proxy/templates/tls-proxy.conf.j2
+++ b/roles/nginx-tls-proxy/templates/tls-proxy.conf.j2
@@ -2,6 +2,14 @@ server {
     listen 443;
     server_name     _;
 
+    # disable server tokens.
+    server_tokens off;
+
+    # gzip compression, bruh.
+    gzip on;
+    gzip_proxied any;
+    gzip_types text/html text/plain text/xml text/css application/x-javascript;
+
     ssl on;
     ssl_certificate {{ nginx_tls_proxy.tls_crt }};
     ssl_certificate_key {{ nginx_tls_proxy.tls_key }};
@@ -15,13 +23,14 @@ server {
     # prefer our cipher list.
     ssl_prefer_server_ciphers on;
 
-    # disable server tokens
-    server_tokens off;
-
     # enable all ciphers and then exclude each weak cipher.
     ssl_ciphers 'kEECDH+ECDSA+AES128 kEECDH+ECDSA+AES256 kEECDH+AES128 kEECDH+AES256 kEDH+AES128 kEDH+AES256 DES-CBC3-SHA +SHA !aNULL !eNULL !LOW !kECDH !DSS !MD5 !EXP !PSK !SRP !CAMELLIA !SEED';
 
+    # Support CORS (running javascript on two different domain names).
     add_header Access-Control-Allow-Origin {{ nginx_tls_proxy.cors_origin }} always;
+    add_header Access-Control-Allow-Headers Authorization,Content-Type always;
+    add_header Access-Control-Allow-Credentials true always;
+    add_header Access-Control-Allow-Methods GET,OPTIONS,POST,PUT,UPDATE,DELETE always;
 
     {% if nginx_tls_proxy.swagger == true %}
     include /etc/nginx/swagger-ui.include;
