--- a/roles/mongodb/templates/mongod.conf.j2
+++ b/roles/mongodb/templates/mongod.conf.j2
@@ -9,6 +9,12 @@ systemLog:
   logAppend: true
   path: /var/log/mongodb/mongod.log
 
+{% if mongodb_enterprise %}
+# send audit info to syslog.
+auditLog:
+  destination: syslog
+{% endif %}
+
 # Where and how to store data.
 storage:
   dbPath: /var/lib/mongo
